# minesweeper

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  minesweeper
include/: board.h  cell.h  def.h  gui.h  minesweeper.h
libs/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
libs/src/: Makefile  cmake_install.cmake
libs/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
src/: minesweeper.cpp
